Bpv 0.3 Настройки - добавлен фрагмент настроек в базовом исполнении - настроена навигация

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,8 @@
         android:name="ru.vdv.dadapprovescontrolpanel.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="ru.vdv.dadapprovescontrolpanel.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings_label" />
 </navigation>
