Bpv 0.4 Разработка UI - выполнен рефакторинг стандартного шаблона - добавлен в модуль users recyclerView и к нему viewHolder - пользователи добавлены непосредственно в адаптер (заглушка)

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,12 +9,12 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_users"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_users" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_user_details"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_user_details" />
     </group>
 </menu>
