--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -1,42 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="300dp"
+    android:layout_margin="8dp"
+    android:checkable="true"
+    android:clickable="true"
+    android:focusable="true"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp"
-    app:contentPadding="4dp">
+    app:contentPadding="0dp"
+    app:rippleColor="#837A33F8">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- Media -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <!-- Фон медиачасти карточки-->
+        <ImageView
+            android:id="@+id/iv_user_custom_bg_image"
+            android:layout_width="match_parent"
+            android:layout_height="194dp"
+            android:alpha="0.4"
+            android:contentDescription="бубубу"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/bg1_01_2"
+            tools:ignore="MissingConstraints" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <!-- Title, secondary and supporting text -->
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Имя пользователя"
+                android:textAppearance="?attr/textAppearanceHeadline6" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Второстепенный тескт"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textColor="?android:attr/textColorSecondary" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Описание еще больше текста аот както так"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textColor="?android:attr/textColorSecondary" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="194dp"
+        android:orientation="vertical"
+        android:padding="16dp" >
 
         <ImageView
             android:id="@+id/iv_user_avatar"
-            android:layout_width="67dp"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="0dp"
             android:contentDescription="@string/iv_userListItem_contentDescription"
-            android:src="@drawable/user_plug"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:padding="4dp"
+            android:src="@drawable/ic_baseline_account_circle_24"
+            android:background="@drawable/round_border_style"/>
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:text="@string/tv_userListItem_text_plug"
-            android:textAlignment="textStart"
-            android:textSize="16sp"
-            android:textStyle="bold|italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
-            app:layout_constraintTop_toTopOf="parent" />
+    <!--            <TextView-->
+    <!--                android:id="@+id/tv_name"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginStart="4dp"-->
+    <!--                android:layout_marginEnd="4dp"-->
+    <!--                android:text="@string/tv_userListItem_text_plug"-->
+    <!--                android:textAlignment="textStart"-->
+    <!--                android:textSize="16sp"-->
+    <!--                android:textStyle="bold|italic"-->
+    <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintStart_toEndOf="@id/iv_user_avatar"-->
+    <!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!--        </LinearLayout>-->
+
+
+    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 </com.google.android.material.card.MaterialCardView>
