Bpv 0.8 Разработка UI - добавлены графики динамическее итпа (пончик) использована библиотека github.com/futuredapp/donut

--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -24,7 +24,7 @@
             android:id="@+id/iv_user_custom_bg_image"
             android:layout_width="match_parent"
             android:layout_height="194dp"
-            android:alpha="0.4"
+            android:alpha="0.3"
             android:contentDescription="бубубу"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/bg1_01_2"
@@ -66,17 +66,111 @@
         android:layout_width="match_parent"
         android:layout_height="194dp"
         android:orientation="vertical"
-        android:padding="16dp" >
+        android:padding="16dp"
+        tools:ignore="MissingClass">
 
         <ImageView
             android:id="@+id/iv_user_avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="0dp"
+            android:background="@drawable/round_border_style"
             android:contentDescription="@string/iv_userListItem_contentDescription"
             android:padding="4dp"
-            android:src="@drawable/ic_baseline_account_circle_24"
-            android:background="@drawable/round_border_style"/>
+            android:src="@drawable/ic_baseline_account_circle_24" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingClass">
+
+            <app.futured.donut.DonutProgressView
+                android:id="@+id/donut_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="4dp"
+                app:donut_bgLineColor="@color/purple_500"
+                app:donut_gapAngle="90"
+                app:donut_gapWidth="70"
+                app:donut_strokeCap="round"
+                app:donut_strokeWidth="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="1"
+                android:textAlignment="center"
+                android:textColor="@color/purple_500"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/donut_view3"
+                app:layout_constraintEnd_toEndOf="@+id/donut_view3"
+                app:layout_constraintStart_toStartOf="@+id/donut_view3"
+                app:layout_constraintTop_toTopOf="@+id/donut_view3" />
+
+
+            <app.futured.donut.DonutProgressView
+                android:id="@+id/donut_view2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="4dp"
+                app:donut_bgLineColor="@color/purple_500"
+                app:donut_gapAngle="90"
+                app:donut_gapWidth="70"
+                app:donut_strokeCap="butt"
+                app:donut_strokeWidth="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/donut_view"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="99"
+                android:textAlignment="center"
+                android:textColor="@color/purple_500"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/donut_view2"
+                app:layout_constraintEnd_toEndOf="@+id/donut_view2"
+                app:layout_constraintStart_toStartOf="@+id/donut_view2"
+                app:layout_constraintTop_toTopOf="@+id/donut_view2" />
+
+            <app.futured.donut.DonutProgressView
+                android:id="@+id/donut_view3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="4dp"
+                app:donut_bgLineColor="@color/purple_500"
+                app:donut_gapAngle="90"
+                app:donut_gapWidth="70"
+                app:donut_strokeCap="butt"
+                app:donut_strokeWidth="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/donut_view2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="999"
+                android:textAlignment="center"
+                android:textColor="@color/purple_500"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/donut_view"
+                app:layout_constraintEnd_toEndOf="@+id/donut_view"
+                app:layout_constraintStart_toStartOf="@+id/donut_view"
+                app:layout_constraintTop_toTopOf="@+id/donut_view" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
     <!--            <TextView-->
